--- a/apps/echo.yaml
+++ b/apps/echo.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: echo
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: echo
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: echo
-  namespace: echo
+  namespace: default
 spec:
   ports:
   - port: 80
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echo
-  namespace: echo
+  namespace: default
 spec:
   selector:
     matchLabels:
